# Umm_project

./: .gitignore  README.md  app.js  chat.html  db.sqlite3  manage.py  pyproject.toml  requirements.txt
.ebextensions/: app.config  django.config
Umm_project/: asgi.py  our_settings.py  settings.py  urls.py  wsgi.py
chat/: models.py  routing.py  service.py  urls.py  views.py
chat/templates/chat/: chatroomlist.html  chattingRoom.html  index.html  room.html
core/: models.py
credit/: apps.py  models.py  urls.py  views.py
credit/apis/v1/: credit_router.py
credit/apis/v1/schemas/: __init__.py  credit_request.py  credit_response.py
credit/services/: __init__.py  credit_services.py
csv/: courses_list.csv
recommend/: models.py  tests.py  views.py
review/: models.py  views.py
review/apis/v1/: review_router.py
review/apis/v1/schemas/: __init__.py  review_request.py  review_response.py
review/services/: review_services.py
static/: app.js
static/css/: credit.css  main.css  modals.css  umm_style.css
static/js/: credit.js  main.js  modal.js
templates/: base.html  main.html
templates/components/: header.html
templates/credit/: credit.html  test.html
templates/main/: main.html
templates/recommend/: recommend.html
templates/user/: signin.html  signup.html  user_activate_email.html
user/: models.py  tokens.py  urls.py  views.py
