[tool.poetry]
name = "umm_project"
version = "0.1.0"
description = ""
authors = ["Elijahrong <nhkim5760@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0.2"
django-ninja = "0.17.0"
hiredis = "^2.0.0"
channels = "^3.0.4"
channels-redis = "^3.3.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
