[tool.poetry]
name = "umm_project"
version = "0.1.0"
description = ""
authors = ["Elijahrong <nhkim5760@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0.2"
django-ninja = "0.17.0"

six = "^1.16.0"

PyMySQL = "1.0.2"
types-PyMySQL = "1.0.6"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
